--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -46,7 +46,7 @@
             <img draggable="false" class="tilt" src="images/About.jpg" alt="">
         </div>
         <div class="content">
-            <h3>I'm Anunay</h3>
+            <h3>I'm Arup</h3>
             <span class="tag">Learning Fullstack Web Devalopment </span>
             <p>Currently pursuing my Fairst year engineering in Information Technology. I am passionate about coding and solving problems through code, and I am excited to work alongside other amazing programmers and learn so much more!.</p>
 
